--- a/Globomantics.Survey/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
+++ b/Globomantics.Survey/Areas/Identity/Pages/Account/RegisterConfirmation.cshtml
@@ -16,7 +16,8 @@
     else
     {
 <p>
-        Please check your email to confirm your account.
+        We're really happy to have you  @Model.FirstName. <br>
+        Please check your email to confirm your account
 </p>
     }
 }
